page header tablet

--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -6,3 +6,10 @@
 .page-header__logo {
   height: 85px;
 }
+
+@media (min-width: $tablet-width) {
+  .page-header__logo {
+    order: 2;
+    height: 400px;
+  }
+}
