--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,7 +1,14 @@
 .main-nav__list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
+  /* Временно для сетки */
   min-height: 50px;
 }
 
 .site-list {
+  /* Временно для сетки */
   min-height: 255px;
 }
