--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -30,4 +30,11 @@
     width: 640px;
     margin: 0 auto;
   }
+
+  .site-list {
+    width: 570px;
+
+    /* Временно для сетки */
+    min-height: 70px;
+  }
 }
