--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -5,3 +5,13 @@
   /* Временно для сетки */
   min-height: 570px;
 }
+
+.stats__header {
+  padding-top: 30px;
+  padding-right: 40px;
+  padding-bottom: 25px;
+  padding-left: 40px;
+
+  /* Временно для сетки */
+  min-height: 130px;
+}
