--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -15,3 +15,10 @@
   /* Временно для сетки */
   min-height: 130px;
 }
+
+.stats__list {
+  width: 100%;
+
+  /* Временно для сетки */
+  min-height: 320px;
+}
