--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -15,6 +15,10 @@
 }
 
 @media (min-width: $tablet-width) {
+  .page-header {
+    background-color: #000000;
+  }
+
   .page-header__logo {
     order: 2;
     height: 400px;
