--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -21,7 +21,12 @@
 
   .page-header__logo {
     order: 2;
+    width: 100%;
     height: 400px;
+    background-color: #000000;
+    background-image: url("/img/bg-header.jpg");
+    background-repeat: no-repeat;
+    background-position: center -9px;
   }
 }
 
