--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -28,6 +28,14 @@
     background-repeat: no-repeat;
     background-position: center -9px;
   }
+
+  .page-header__logo img {
+    display: block;
+    width: 370px;
+    height: auto;
+    margin: 0 auto;
+    margin-top: 40px;
+  }
 }
 
 @media (min-width: $desktop-width) {
