--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -8,6 +8,27 @@
   background-color: #826550;
 }
 
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+
+  display: block;
+  width: 70px;
+  height: 50px;
+
+  background-color: #6a4d38;
+
+  cursor: pointer;
+  border: none;
+
+  &:hover,
+  &:active {
+    background-color: #624530;
+  }
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
