--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,5 @@
 @import "outlines";
 @import "blocks/page-header";
 @import "blocks/main-nav";
+@import "blocks/site-list";
 @import "blocks/stats";
