--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,4 +5,5 @@
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
+@import "blocks/user-list";
 @import "blocks/stats";
