--- a/sass/blocks/user-list.scss
+++ b/sass/blocks/user-list.scss
@@ -10,6 +10,21 @@
   text-decoration: none;
 }
 
+.user-list__login-icon {
+  position: absolute;
+  top: 17px;
+  left: 21px;
+
+  width: 16px;
+  height: 16px;
+
+  opacity: 0.3;
+
+  polygon {
+    fill: #ffffff;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .user-list {
     width: 60px;
