mobile width only

--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -88,6 +88,10 @@
   min-height: 50px;
 }
 
+@media (max-width: $mobile-width-only) {
+
+}
+
 @media (min-width: $tablet-width) {
   .main-nav {
     width: auto;
