change active list item a

--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -94,6 +94,13 @@
     }
   }
 
+  .main-nav--closed .site-list__item--active a {
+    padding-right: 70px;
+    padding-left: 70px;
+
+    text-align: center;
+  }
+
   .main-nav--closed .user-list__item {
     display: none;
   }
