--- a/sass/blocks/user-list.scss
+++ b/sass/blocks/user-list.scss
@@ -29,6 +29,19 @@
   .user-list {
     width: 60px;
   }
+
+  .user-list__login {
+    width: 60px;
+    height: 70px;
+    padding: 0;
+
+    font-size: 0;
+  }
+
+  .user-list__login-icon {
+    top: 29px;
+    left: 12px;
+  }
 }
 
 @media (min-width: $desktop-width) {
