--- a/sass/blocks/user-list.scss
+++ b/sass/blocks/user-list.scss
@@ -36,6 +36,14 @@
     padding: 0;
 
     font-size: 0;
+
+    &:hover .user-list__login-icon {
+      opacity: 1;
+
+      polygon {
+        fill: #826550;
+      }
+    }
   }
 
   .user-list__login-icon {
