--- a/sass/blocks/user-list.scss
+++ b/sass/blocks/user-list.scss
@@ -54,7 +54,8 @@
 
 @media (min-width: $desktop-width) {
   .user-list {
-    width: 160px;
+    width: auto;
+    max-width: 160px;
   }
 
   .user-list__login {
