--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -14,6 +14,17 @@
   background-color: #ffffff;
 }
 
+.stats__slogan {
+  display: block;
+  margin-bottom: 15px;
+
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .stats__list {
   width: 100%;
 
