--- a/sass/scaffolding.scss
+++ b/sass/scaffolding.scss
@@ -2,14 +2,14 @@
   font-weight: normal;
   font-family: "PT Sans Narrow";
   font-style: normal;
-  src: url("fonts/PTSansNarrow.woff2") format("woff2"), url("fonts/PTSansNarrow.woff") format("woff");
+  src: url("/fonts/PTSansNarrow/PTSansNarrow.woff2") format("woff2"), url("/fonts/PTSansNarrow/PTSansNarrow.woff") format("woff");
 }
 
 @font-face {
   font-weight: bold;
   font-family: "PT Sans Narrow";
   font-style: normal;
-  src: url("fonts/PTSansNarrowBold.woff2") format("woff2"), url("fonts/PTSansNarrowBold.woff") format("woff");
+  src: url("/fonts/PTSansNarrowBold/PTSansNarrowBold.woff2") format("woff2"), url("/fonts/PTSansNarrowBold/PTSansNarrowBold.woff") format("woff");
 }
 
 body {
