--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -25,6 +25,14 @@
   text-transform: uppercase;
 }
 
+.stats__intro {
+  margin: 0;
+
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+}
+
 .stats__list {
   width: 100%;
 
