--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -63,8 +63,25 @@
 .stats__list {
   width: 100%;
 
-  /* Временно для сетки */
-  height: 320px;
+  border-collapse: collapse;
+}
+
+.stats__list tr {
+  color: #ffffff;
+
+  background-color: #404040;
+
+  &:nth-child(2) {
+    background-color: #4e4e4e;
+  }
+
+  &:nth-child(3) {
+    background-color: #353535;
+  }
+
+  &:nth-child(4) {
+    background-color: #404040;
+  }
 }
 
 @media (min-width: $tablet-width) {
