stats__header decorative element

--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -123,6 +123,24 @@
     min-height: 0;
   }
 
+  .stats__header {
+    position: relative;
+
+    min-height: 129px;
+
+    &::before {
+      content: "";
+
+      position: absolute;
+      top: 27px;
+      left: -15px;
+
+      border: 15px solid transparent;
+      border-bottom-color: #ffffff;
+      transform: rotate(45deg);
+    }
+  }
+
   .stats__list {
     display: flex;
   }
