stats__header flex

--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -126,6 +126,9 @@
   .stats__header {
     position: relative;
 
+    display: flex;
+    flex-wrap: wrap;
+
     min-height: 129px;
 
     &::before {
