stats__slogan tablet

--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -144,6 +144,16 @@
     }
   }
 
+  .stats__slogan {
+    width: 240px;
+    margin-bottom: 18px;
+
+    font-size: 40px;
+    line-height: 40px;
+    text-align: left;
+    text-transform: none;
+  }
+
   .stats__list {
     display: flex;
   }
