--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -153,6 +153,14 @@
     text-align: left;
     text-transform: none;
   }
+  
+  .stats__intro {
+    width: 210px;
+    margin-top: 5px;
+    padding-right: 47px;
+
+    text-align:  left;
+  }
 
   .stats__list {
     display: flex;
