--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -128,6 +128,7 @@
 
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 
     min-height: 129px;
 
@@ -153,13 +154,13 @@
     text-align: left;
     text-transform: none;
   }
-  
+
   .stats__intro {
     width: 210px;
     margin-top: 5px;
     padding-right: 47px;
 
-    text-align:  left;
+    text-align: left;
   }
 
   .stats__list {
