--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -163,6 +163,17 @@
     text-align: left;
   }
 
+  .stats__legend--top {
+    display: block;
+    width: 240px;
+
+    color: rgba(0, 0, 0, 0.3);
+  }
+
+  .stats__legend--bottom {
+    display: none;
+  }
+
   .stats__list {
     display: flex;
   }
