--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -174,6 +174,11 @@
     display: none;
   }
 
+  .stats__list tbody {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   .stats__list {
     display: flex;
   }
