--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -174,6 +174,10 @@
     display: none;
   }
 
+  .stats__list {
+    display: flex;
+  }
+
   .stats__list tbody {
     display: flex;
     flex-wrap: wrap;
@@ -191,9 +195,19 @@
     padding: 0;
   }
 
-  .stats__list {
-    display: flex;
+  .stats__value {
+    margin-bottom: 7px;
+
+    font-size: 72px;
+    line-height: 72px;
   }
+
+  .stats__field {
+    font-size: 20px;
+    line-height: 27px;
+    text-align: left;
+  }
+
 }
 
 @media (min-width: $desktop-width) {
