stats slogan intro legend desktop

--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -230,6 +230,21 @@
     }
   }
 
+  .stats__slogan {
+    width: auto;
+    margin-bottom: 42px;
+  }
+
+  .stats__intro {
+    width: auto;
+    margin-bottom: 32px;
+    padding-right: 30px;
+  }
+
+  .stats__legend--top {
+    width: auto;
+  }
+
   .stats__list {
     width: 640px;
   }
