--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -1,9 +1,9 @@
 .main-nav {
   position: relative;
 
-  width: 320px;
+  width: auto;
   min-height: 51px;
-  margin: 0 auto;
+  //margin: 0 auto;
 
   background-color: #826550;
 }
