--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -168,7 +168,8 @@
     display: flex;
     justify-content: space-between;
 
-    width: 640px;
+    width: 84%;
+    max-width: 960px;
 
     margin: 0 auto;
 
