stats width tablet

--- a/sass/blocks/stats.scss
+++ b/sass/blocks/stats.scss
@@ -115,7 +115,9 @@
 
 @media (min-width: $tablet-width) {
   .stats {
-    width: 640px;
+    width: 84%;
+    max-width: 960px;
+    margin: 0 auto;
     margin-top: -185px;
   }
 
