--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@
 @import "variables";
 @import "scaffolding";
 @import "mixins";
-@import "outlines";
+//@import "outlines";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
