--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -29,6 +29,11 @@
     background-image: url("/img/bg-header.jpg");
     background-repeat: no-repeat;
     background-position: center -9px;
+
+    @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
+      background-image: url("/img/bg-header-2х.jpg");
+      background-size: 1200px auto;
+    }
   }
 
   .page-header__logo img {
