--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,9 +2,11 @@
 @import "variables";
 @import "scaffolding";
 @import "mixins";
+@import "blocks/slider";
 //@import "outlines";
 @import "blocks/page-header";
 @import "blocks/main-nav";
 @import "blocks/site-list";
 @import "blocks/user-list";
 @import "blocks/stats";
+@import "blocks/advantages";
