--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -1,14 +1,8 @@
 .advantages {
   width: auto;
-
-  /* Временно */
-  outline: 1px solid green;
-  min-height: 380px;
 }
 
 .advantages__wrapper {
-  margin: 0 auto;
-
   padding-top: 30px;
   padding-bottom: 13px;
 }
@@ -24,6 +18,8 @@
   position: relative;
   padding: 0 40px;
   padding-top: 100px;
+
+  text-align: center;
 
   &::before {
     content: "";
@@ -72,22 +68,30 @@
   font-size: 30px;
   line-height: 30px;
   font-weight: bold;
-  text-align: center;
   text-transform: uppercase;
 }
 
 .advantages__description {
-  width: 280px;
   margin: 0 auto;
+  max-width: 280px;
 
   font-size: 20px;
   line-height: 26px;
-  text-align: center;
+}
+
+.advantages__toggles {
+  display: block;
+  width: auto;
+
+  bottom: 12px;
+
+  margin: 0 auto;
+  margin-top: 40px;
 }
 
 @media (max-width: $mobile-width-only) {
   .advantages__wrapper {
-    height: 315px;
+    min-height: 315px;
   }
 }
 
@@ -96,18 +100,83 @@
     width: 84%;
     max-width: 1200px;
     margin: 0 auto;
+    text-align: center;
+  }
 
-    /* Временно */
-    min-height: 580px;
+  .advantages__wrapper {
+    padding: 0;
+  }
+
+  .advantages__item {
+    display: inline-block;
+
+    text-align: left;
+
+    width: 520px;
+    padding: 0;
+    padding-top: 38px;
+    padding-bottom: 38px;
+    padding-left: 120px;
+
+    border-bottom: 1px solid #4e4e4e;
+
+
+    &::before {
+      top: 40px;
+      left: 10px;
+
+      margin-left: 0;
+    }
+  }
+
+  .advantages__description {
+    margin: 0;
+    max-width: 100%;
+  }
+
+  .advantages__toggles {
+    display: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .advantages {
     display: flex;
-    //width: 960px;
+    padding-top: 60px;
+    padding-bottom: 100px;
+  }
 
-    /* Временно */
-    min-height: 450px;
+  .advantages__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .advantages__item {
+    flex-basis: 270px;
+    flex-grow: 1;
+    width: auto;
+    padding: 0 30px;
+    padding-top: 120px;
+
+    margin: 0;
+    margin-top: 10px;
+
+    text-align: center;
+
+    border-bottom: none;
+    border-right: 1px solid #4e4e4e;
+
+    &:last-child {
+      border-rightleft: none;
+    }
+
+
+    &::before {
+      top: 0;
+      left: 50%;
+
+      margin-left: -45.5px;
+    }
   }
 }
