--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import "scaffolding";
 @import "mixins";
 @import "blocks/slider";
+@import "blocks/button";
 //@import "outlines";
 @import "blocks/page-header";
 @import "blocks/main-nav";
@@ -10,3 +11,4 @@
 @import "blocks/user-list";
 @import "blocks/stats";
 @import "blocks/advantages";
+@import "blocks/news";
