--- a/sass/blocks/advantages.scss
+++ b/sass/blocks/advantages.scss
@@ -118,14 +118,17 @@
     padding-bottom: 38px;
     padding-left: 120px;
 
-    border-bottom: 1px solid #4e4e4e;
-
+    border-top: 1px solid #4e4e4e;
 
     &::before {
       top: 40px;
       left: 10px;
 
       margin-left: 0;
+    }
+
+    &:first-child {
+      border-top: none;
     }
   }
 
@@ -164,11 +167,11 @@
 
     text-align: center;
 
-    border-bottom: none;
+    border-top: none;
     border-right: 1px solid #4e4e4e;
 
     &:last-child {
-      border-rightleft: none;
+      border-right: none;
     }
 
 
